# PlayGround

./: .gitignore  README.md
GenAI/: README.md  pyproject.toml
GenAI/examples/: README.md  simple_llm.py  vector_search.py
GenAI/fin_bot/: README.md  news.py  yahoo_finance.py
GenAI/fin_bot/data/: daily_news_NVDA_with_sentiments.xlsx
GenAI/fin_bot/data/financials/balance_sheet/: balance_sheet_annually_AAPL.csv  balance_sheet_annually_AAPL.xlsx  balance_sheet_annually_AAPL_raw.csv  balance_sheet_annually_AAPL_raw.xlsx  balance_sheet_annually_AAPL_raw_T.xlsx
GenAI/fin_bot/data/financials/cashflow/: cashflow_annually_AAPL.csv  cashflow_annually_AAPL.xlsx  cashflow_annually_AAPL_raw.csv  cashflow_annually_AAPL_raw.xlsx  cashflow_annually_AAPL_raw_T.xlsx
GenAI/fin_bot/data/financials/income_statements/: income_stmt_annually_AAPL.csv  income_stmt_annually_AAPL.xlsx  income_stmt_annually_AAPL_raw.xlsx  income_stmt_annually_AAPL_raw_T.xlsx
GenAI/fin_bot/data/news/: daily_news_NVDA.xlsx
GenAI/fin_bot/data/stocks/: indicators.xlsx
GenAI/genai/: something.py
GenAI/helper_funtions/: lang_history.py  lang_loaders.py  lang_prompts.py  lang_splitters.py  llama_agents.py  llamaindex_agents.py
GenAI/langchain/: langchain_prompt.py  langchain_splitters.py  vectorstore.py
GenAI/langchain/data/.vectordb/: index.faiss
GenAI/llm_test/: Langchain_ollama.py  LlamaIndex_ollama.py  llm_tuning.py  ollama.py
GenAI/llm_toolkit/: langchain_loaders.py  langchain_splitters.py  vectorstore.py
GenAI/llm_toolkit/data/.vectordb/: index.pkl
GenAI/opt/: README.md  Write_Up.md
GenAI/opt/test/: 1 copy 2.txt  1 copy 3.txt  1 copy 4.txt  1 copy.txt  1.txt
GenAI/tests/: llm_tuning.py
OnePiece/: pyproject.toml
OnePiece/src/onepiece/: main.py
OnePiece/src/onepiece/net/: net.py
oneforall/: README.md  pyproject.toml
oneforall/src/oneforall/: oneforall.py
oneforall/src/tools/nettools/: ftp.py  mapper.py  net.py  ping.py
oneforall/src/tools/webtools/: web.py
oneforall/src/utilities/: cmdutils.py  netutils.py  pathutils.py
onepiece/: pyproject.toml  requirements.txt
onepiece/src/onepiece/utils/: cmdutils.py  netutils.py  pathutils.py
(+19 files in other folders)
