[tool.poetry]
name = "genai"
version = "0.1.0"
description = "For GenAI and LLM projects."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llm-ollama = "^0.4.1"
ollama = "^0.2.0"
torch = "^2.3.0"
langchain = "^0.2.1"
langchain-community = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
