[tool.poetry]
name = "genai"
version = "0.1.0"
description = "For some AI projects"
authors = ["pratty010 <pratyushp010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-core = "^0.2.10"
langchain-experimental = "^0.0.62"
langsmith = "^0.1.82"
ollama = "^0.2.1"
unstructured = "^0.14.9"
markdown = "^3.6"
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
