[tool.poetry]
name = "onepiece"
version = "0.1.0"
description = ""
authors = ["pratty010 <you@example.com>"]
readme = "README.md"
packages = [{include = "onepiece", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
