[tool.poetry]
name = "oneforall"
version = "0.1.0"
description = "One Tool for All"
authors = ["pratty010 <pratyushp010@gmail.com>"]
readme = "README.md"
packages = [{include = "oneforall", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
